--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	html{font-family: 'Noto Sans KR', sans-serif;letter-spacing: -0.1rem;line-height: 1.3;}
 
 	body,ul,h1,p{margin: 0; padding: 0; background: black;}
-	h1{font-size: 3rem;color: gray}
+	h1{font-size: 2.5rem;color: gray}
 	li{list-style-type: none;}
-	a{text-decoration: none; font-size: 3rem; color: white;display: block;padding-left: 3rem;}
+	a{text-decoration: none; font-size: 2.5rem; color: white;display: block;padding-left: 3rem;}
 
 
 </style>
@@ -24,6 +24,7 @@
 	const linkData = [
 {"name":"홈페이지", "link":"http://vd.seoultech.ac.kr/"},
 {"name":"유튜브", "link":"https://youtube.com/channel/UCPu4k-yD3NpuXVkqvaadmXQ/"},
+{"name":"22졸전", "link":"http://stvd2022.com"},
 {"name":"21졸전", "link":"https://seoultech-vd.github.io/2021VisualGardener"},
 {"name":"21과제전", "link":"https://seoultech-vd-archive.github.io/2021-termfinal/"}, 
 {"name":"20졸전", "link":"https://www.youtube.com/watch?v=KnI3UEzNhys&ab_channel=MajorLeegueStudio"},
