--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	body,ul,h1,p{margin: 0; padding: 0; background: black;}
 	h1{font-size: 2.5rem;color: gray}
 	li{list-style-type: none;}
-	a{text-decoration: none; font-size: 2.5rem; color: white;display: block;padding-left: 3rem;}
+	a{text-decoration: none; font-size: 2.5rem; color: white;display: block;padding-left: 2.5rem;}
 
 
 </style>
@@ -24,6 +24,7 @@
 	const linkData = [
 {"name":"홈페이지", "link":"http://vd.seoultech.ac.kr/"},
 {"name":"유튜브", "link":"https://youtube.com/channel/UCPu4k-yD3NpuXVkqvaadmXQ/"},
+{"name":"인스타그램", "link":"https://instagram.com/vd.seoultech"},
 {"name":"22졸전", "link":"http://stvd2022.com"},
 {"name":"21졸전", "link":"https://seoultech-vd.github.io/2021VisualGardener"},
 {"name":"21과제전", "link":"https://seoultech-vd-archive.github.io/2021-termfinal/"}, 
