--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 {"name":"인스타그램", "link":"https://instagram.com/vd.seoultech"},
 {"name":"유튜브", "link":"https://youtube.com/channel/UCPu4k-yD3NpuXVkqvaadmXQ/"},
 {"name":"22졸전", "link":"http://stvd2022.com"},
+{"name":"22과제전", "link":"https://seoultech-vd-archive.github.io/2022-termfinal/"},
 {"name":"21졸전", "link":"https://seoultech-vd.github.io/2021VisualGardener"},
 {"name":"21과제전", "link":"https://seoultech-vd-archive.github.io/2021-termfinal/"}, 
 {"name":"20졸전", "link":"https://www.youtube.com/watch?v=KnI3UEzNhys&ab_channel=MajorLeegueStudio"},
