--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>seoultech vd links</title>
+	<title>서울과학기술대학교 시각디자인전공</title>
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://vd.seoultech.ac.kr">
+	<meta property="og:image" content="thumbnail.jpg">
+	<meta property="og:title" content="서울과학기술대학교 시각디자인">
+	<meta property="og:description" content="서울과학기술대학교 조형예술대학 디자인학과 시각디자인전공">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap" rel="stylesheet">
 <style type="text/css">
 	html{font-family: 'Noto Sans KR', sans-serif;letter-spacing: -0.1rem;line-height: 1.3;}
-
 	body,ul,h1,p{margin: 0; padding: 0; background: black;}
 	h1{font-size: 2.5rem;color: gray}
 	li{list-style-type: none;}
-	a{text-decoration: none; font-size: 2.5rem; color: white;display: block;padding-left: 2.5rem;}
-
-
+	a{text-decoration: none; font-size: 2.5rem; color: white;display: block;padding-left: 2.4rem;}
 </style>
 </head>
 <body>
