--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap" rel="stylesheet">
 <style type="text/css">
-	html{font-family: 'Noto Sans KR', sans-serif;letter-spacing: -0.1rem;line-height: 1.3;}
+	html{font-family: 'Noto Sans KR', sans-serif;letter-spacing: -0.1rem;line-height: 1.3; font-size:14px;}
 	body,ul,h1,p{margin: 0; padding: 0; background: black;}
 	h1{font-size: 2.5rem;color: gray}
 	li{list-style-type: none;}
