--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 {"name":"홈페이지", "link":"http://vd.seoultech.ac.kr/"},
 {"name":"인스타그램", "link":"https://instagram.com/vd.seoultech"},
 {"name":"유튜브", "link":"https://www.youtube.com/@vd.seoultech"},
-{"name":"24졸전", "link":"https://2024stvd.me"},
+{"name":"24졸전", "link":"http://2024stvd.me"},
 {"name":"23졸전", "link":"http://stvcd2023.com"},
 {"name":"23과제전", "link":"https://seoultech-vd-archive.github.io/2023-termfinal/"},		
 {"name":"22졸전", "link":"http://stvd2022.com"},
